[package]
name = "scrabby"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
colored = { version = "2.0.0", optional = true }
serde = { version = "1.0.164", optional = true }
serde_derive = { version = "1.0.164", optional = true }

[features]
serde = ["dep:serde", "dep:serde_derive"]
pretty-print = ["dep:colored"]
